force-app/main/default/objects/Car__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <inlineHelpText>Please enter your car name</inlineHelpText>
    <label>Name</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>