force-app/main/default/objects/Car__c/recordTypes/No_Registration.recordType-meta.xml
<RecordType>
    <fullName>No_Registration</fullName>
    <active>true</active>
    <label>No Registration</label>
</RecordType>